[gd_scene load_steps=50 format=2]

[ext_resource path="res://script/firstRun.gd" type="Script" id=1]
[ext_resource path="res://script/applySettings.gd" type="Script" id=2]
[ext_resource path="res://script/menuHTTPRequest.gd" type="Script" id=3]
[ext_resource path="res://script/menu.gd" type="Script" id=4]
[ext_resource path="res://sprites/title.png" type="Texture" id=5]
[ext_resource path="res://sprites/play.png" type="Texture" id=6]
[ext_resource path="res://sprites/play_inv.png" type="Texture" id=7]
[ext_resource path="res://menu_theme.tres" type="Theme" id=8]
[ext_resource path="res://sprites/scores.png" type="Texture" id=9]
[ext_resource path="res://sprites/scores_inv.png" type="Texture" id=10]
[ext_resource path="res://sprites/Settings.png" type="Texture" id=11]
[ext_resource path="res://sprites/Settings_inv.png" type="Texture" id=12]
[ext_resource path="res://font_menu.tres" type="DynamicFont" id=13]
[ext_resource path="res://sprites/front_character.png" type="Texture" id=14]
[ext_resource path="res://sprites/back_character.png" type="Texture" id=15]
[ext_resource path="res://script/popup.gd" type="Script" id=16]
[ext_resource path="res://settings_style.tres" type="Theme" id=17]
[ext_resource path="res://font.ttf" type="DynamicFontData" id=18]
[ext_resource path="res://sprites/cancel.png" type="Texture" id=19]
[ext_resource path="res://sprites/cancel_inv.png" type="Texture" id=20]
[ext_resource path="res://sprites/login.png" type="Texture" id=21]
[ext_resource path="res://sprites/login_inv.png" type="Texture" id=22]
[ext_resource path="res://sprites/sign_up.png" type="Texture" id=23]
[ext_resource path="res://sprites/sign_up_inv.png" type="Texture" id=24]
[ext_resource path="res://sprites/enter.png" type="Texture" id=25]
[ext_resource path="res://sprites/enter_inv.png" type="Texture" id=26]
[ext_resource path="res://settings_font.tres" type="DynamicFont" id=27]
[ext_resource path="res://script/inputText.gd" type="Script" id=28]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 18 )

[sub_resource type="DynamicFont" id=2]
extra_spacing_top = 4
font_data = ExtResource( 18 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 18 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 18 )

[sub_resource type="Theme" id=5]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 1, 1, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 1, 1, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 1, 1, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 1, 1, 1, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=11]
size = 32
font_data = ExtResource( 18 )

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 18 )

[sub_resource type="Theme" id=13]

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 1, 1, 1, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 1, 1, 1, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 1, 1, 1, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 1, 1, 1, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.517647, 0.584314, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=20]
size = 32
extra_spacing_top = 4
font_data = ExtResource( 18 )

[sub_resource type="DynamicFont" id=21]
size = 48
font_data = ExtResource( 18 )

[node name="menu_scene" type="Node"]
script = ExtResource( 1 )

[node name="applySettings" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Request" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
focus_mode = 2
color = Color( 0.519529, 0.583344, 1, 1 )

[node name="menu" type="VBoxContainer" parent="."]
margin_left = 297.0
margin_top = 30.0
margin_right = 677.0
margin_bottom = 422.0
focus_mode = 2
custom_constants/separation = 30
script = ExtResource( 4 )

[node name="Title" type="TextureRect" parent="menu"]
margin_right = 430.0
margin_bottom = 110.0
rect_min_size = Vector2( 430, 110 )
focus_mode = 2
texture = ExtResource( 5 )
stretch_mode = 5

[node name="subMenu" type="VBoxContainer" parent="menu"]
margin_top = 140.0
margin_right = 430.0
margin_bottom = 502.0
focus_mode = 2
custom_constants/separation = 10
alignment = 1

[node name="play" type="VBoxContainer" parent="menu/subMenu"]
margin_right = 430.0
margin_bottom = 162.0
focus_mode = 2
alignment = 1

[node name="Play" type="TextureButton" parent="menu/subMenu/play"]
margin_left = 115.0
margin_right = 315.0
margin_bottom = 90.0
rect_min_size = Vector2( 200, 90 )
size_flags_horizontal = 4
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
expand = true
stretch_mode = 4

[node name="OnlineMode" type="CheckButton" parent="menu/subMenu/play"]
margin_left = 77.0
margin_top = 94.0
margin_right = 353.0
margin_bottom = 130.0
focus_mode = 0
size_flags_horizontal = 4
theme = ExtResource( 8 )
enabled_focus_mode = 0
text = "ONLINE MODE: "

[node name="User" type="Label" parent="menu/subMenu/play"]
margin_left = 115.0
margin_top = 134.0
margin_right = 315.0
margin_bottom = 162.0
size_flags_horizontal = 4
theme = ExtResource( 8 )
text = "Playing as: "
align = 1
uppercase = true

[node name="Scores" type="TextureButton" parent="menu/subMenu"]
margin_left = 50.0
margin_top = 172.0
margin_right = 380.0
margin_bottom = 262.0
rect_min_size = Vector2( 330, 90 )
size_flags_horizontal = 4
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
expand = true
stretch_mode = 4

[node name="Settings" type="TextureButton" parent="menu/subMenu"]
margin_left = 25.0
margin_top = 272.0
margin_right = 405.0
margin_bottom = 362.0
rect_min_size = Vector2( 380, 90 )
size_flags_horizontal = 4
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
expand = true
stretch_mode = 4

[node name="Copyright" type="Label" parent="."]
margin_left = 376.0
margin_top = 570.0
margin_right = 648.0
margin_bottom = 592.0
focus_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 13 )
text = "Ketashi Corp 2019"
align = 1
uppercase = true

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 132.0
margin_top = 158.0
margin_right = 143.0
margin_bottom = 183.0
rect_scale = Vector2( 15, 15 )
focus_mode = 2
texture = ExtResource( 14 )

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 729.0
margin_top = 158.0
margin_right = 740.0
margin_bottom = 183.0
rect_scale = Vector2( 15, 15 )
focus_mode = 2
texture = ExtResource( 15 )

[node name="popup" type="ColorRect" parent="."]
pause_mode = 2
margin_left = 120.0
margin_top = 150.0
margin_right = 920.0
margin_bottom = 450.0
focus_mode = 2
color = Color( 0, 0.0980392, 0.745098, 1 )
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="popup"]
margin_left = 25.0
margin_top = 30.0
margin_right = 525.0
margin_bottom = 123.0
rect_scale = Vector2( 1.5, 1.5 )
focus_mode = 2
theme = ExtResource( 17 )

[node name="Label" type="Label" parent="popup/VBoxContainer"]
margin_right = 500.0
margin_bottom = 138.0
rect_min_size = Vector2( 0, 90 )
focus_mode = 2
custom_fonts/font = SubResource( 1 )
text = "Do you want to sign in or log in in order to use the online ranking system?
--
THIS FEATURE IS DISABLED
Our SERVER ARE DOWN !
Click \"Cancel\" to play offline"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="popup/VBoxContainer"]
margin_top = 142.0
margin_right = 500.0
margin_bottom = 178.0
focus_mode = 2
alignment = 1

[node name="Cancel" type="TextureButton" parent="popup/VBoxContainer/HBoxContainer"]
margin_left = 186.0
margin_right = 314.0
margin_bottom = 36.0
rect_min_size = Vector2( 128, 36 )
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 20 )
expand = true
stretch_mode = 4

[node name="Log In" type="TextureButton" parent="popup/VBoxContainer/HBoxContainer"]
visible = false
margin_left = 196.0
margin_right = 300.0
margin_bottom = 36.0
rect_min_size = Vector2( 104, 36 )
texture_normal = ExtResource( 21 )
texture_pressed = ExtResource( 22 )
expand = true
stretch_mode = 4

[node name="Sign Up" type="TextureButton" parent="popup/VBoxContainer/HBoxContainer"]
visible = false
margin_left = 250.0
margin_right = 382.0
margin_bottom = 36.0
rect_min_size = Vector2( 132, 36 )
texture_normal = ExtResource( 23 )
texture_pressed = ExtResource( 24 )
expand = true
stretch_mode = 4

[node name="logIn" type="ColorRect" parent="."]
pause_mode = 2
visible = false
margin_left = 120.0
margin_top = 100.0
margin_right = 920.0
margin_bottom = 500.0
focus_mode = 2
color = Color( 0.00288391, 0.0980392, 0.745098, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="logIn"]
margin_left = 25.0
margin_top = 30.0
margin_right = 525.0
margin_bottom = 123.0
rect_scale = Vector2( 1.5, 1.5 )
focus_mode = 2
theme = ExtResource( 17 )
custom_constants/separation = 0

[node name="Label" type="Label" parent="logIn/VBoxContainer"]
margin_right = 500.0
margin_bottom = 90.0
rect_min_size = Vector2( 0, 90 )
focus_mode = 2
custom_fonts/font = SubResource( 1 )
text = "In order to use online ranking, please sign in / log in bellow (24 characters max, no spaces):"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="logIn/VBoxContainer"]
margin_top = 90.0
margin_right = 500.0
margin_bottom = 166.0
focus_mode = 2

[node name="Input" type="VBoxContainer" parent="logIn/VBoxContainer/HBoxContainer"]
margin_right = 350.0
margin_bottom = 76.0
custom_constants/separation = 7

[node name="Username" type="LineEdit" parent="logIn/VBoxContainer/HBoxContainer/Input"]
margin_right = 350.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 2 )
max_length = 24
placeholder_text = "USERNAME"

[node name="Password" type="LineEdit" parent="logIn/VBoxContainer/HBoxContainer/Input"]
margin_top = 41.0
margin_right = 350.0
margin_bottom = 75.0
rect_min_size = Vector2( 350, 34 )
custom_fonts/font = SubResource( 2 )
max_length = 24
secret = true
placeholder_text = "PASSWORD"

[node name="Buttons" type="VBoxContainer" parent="logIn/VBoxContainer/HBoxContainer"]
margin_left = 354.0
margin_right = 482.0
margin_bottom = 76.0

[node name="Enter" type="TextureButton" parent="logIn/VBoxContainer/HBoxContainer/Buttons"]
margin_right = 112.0
margin_bottom = 36.0
rect_min_size = Vector2( 112, 36 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 25 )
texture_pressed = ExtResource( 26 )
expand = true
stretch_mode = 4

[node name="Cancel" type="TextureButton" parent="logIn/VBoxContainer/HBoxContainer/Buttons"]
margin_top = 40.0
margin_right = 128.0
margin_bottom = 76.0
rect_min_size = Vector2( 128, 36 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 20 )
expand = true
stretch_mode = 4

[node name="Result" type="Label" parent="logIn/VBoxContainer"]
margin_top = 166.0
margin_right = 500.0
margin_bottom = 211.0
rect_min_size = Vector2( 0, 45 )
focus_mode = 2
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="signUp" type="ColorRect" parent="."]
pause_mode = 2
visible = false
margin_left = 120.0
margin_top = 100.0
margin_right = 920.0
margin_bottom = 550.0
focus_mode = 2
color = Color( 0, 0.0980392, 0.745098, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="signUp"]
margin_left = 25.0
margin_top = 30.0
margin_right = 525.0
margin_bottom = 123.0
rect_scale = Vector2( 1.5, 1.5 )
focus_mode = 2
theme = ExtResource( 17 )
custom_constants/separation = 0

[node name="Label" type="Label" parent="signUp/VBoxContainer"]
margin_right = 500.0
margin_bottom = 90.0
rect_min_size = Vector2( 0, 90 )
focus_mode = 2
custom_fonts/font = SubResource( 1 )
text = "In order to use online ranking, please sign in bellow (4 to 24 characters, no spaces for password and username)."
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="signUp/VBoxContainer"]
margin_top = 90.0
margin_right = 500.0
margin_bottom = 206.0
focus_mode = 2

[node name="Input" type="VBoxContainer" parent="signUp/VBoxContainer/HBoxContainer"]
margin_right = 350.0
margin_bottom = 116.0
custom_constants/separation = 7

[node name="Username" type="LineEdit" parent="signUp/VBoxContainer/HBoxContainer/Input"]
margin_right = 350.0
margin_bottom = 34.0
rect_min_size = Vector2( 350, 34 )
custom_fonts/font = SubResource( 2 )
max_length = 24
placeholder_text = "USERNAME"

[node name="Password" type="LineEdit" parent="signUp/VBoxContainer/HBoxContainer/Input"]
margin_top = 41.0
margin_right = 350.0
margin_bottom = 75.0
rect_min_size = Vector2( 350, 34 )
custom_fonts/font = SubResource( 2 )
max_length = 24
secret = true
placeholder_text = "PASSWORD"

[node name="Confirm Password" type="LineEdit" parent="signUp/VBoxContainer/HBoxContainer/Input"]
margin_top = 82.0
margin_right = 350.0
margin_bottom = 116.0
rect_min_size = Vector2( 350, 34 )
custom_fonts/font = SubResource( 2 )
max_length = 24
secret = true
placeholder_text = "CONFIRM PASSOWRD"

[node name="Buttons" type="VBoxContainer" parent="signUp/VBoxContainer/HBoxContainer"]
margin_left = 354.0
margin_right = 482.0
margin_bottom = 116.0
rect_min_size = Vector2( 112, 88 )
alignment = 1

[node name="Enter" type="TextureButton" parent="signUp/VBoxContainer/HBoxContainer/Buttons"]
margin_top = 20.0
margin_right = 112.0
margin_bottom = 56.0
rect_min_size = Vector2( 112, 36 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 25 )
texture_pressed = ExtResource( 26 )
expand = true
stretch_mode = 4

[node name="Cancel" type="TextureButton" parent="signUp/VBoxContainer/HBoxContainer/Buttons"]
margin_top = 60.0
margin_right = 128.0
margin_bottom = 96.0
rect_min_size = Vector2( 128, 36 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 20 )
expand = true
stretch_mode = 4

[node name="Result" type="Label" parent="signUp/VBoxContainer"]
margin_top = 206.0
margin_right = 500.0
margin_bottom = 251.0
rect_min_size = Vector2( 0, 45 )
focus_mode = 2
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="developerUpdate" type="ColorRect" parent="."]
pause_mode = 2
visible = false
margin_left = 112.0
margin_top = 100.0
margin_right = 912.0
margin_bottom = 500.0
rect_min_size = Vector2( 800, 400 )
focus_mode = 2
color = Color( 0, 0.0980392, 0.745098, 1 )

[node name="Scroll" type="ScrollContainer" parent="developerUpdate"]
margin_left = 25.0
margin_top = 25.0
margin_right = 775.0
margin_bottom = 345.0
focus_mode = 2
theme = ExtResource( 17 )
scroll_horizontal_enabled = false

[node name="SettingsBox" type="VBoxContainer" parent="developerUpdate/Scroll"]
margin_right = 750.0
margin_bottom = 200.0
rect_min_size = Vector2( 750, 200 )
focus_mode = 2

[node name="Title" type="Label" parent="developerUpdate/Scroll/SettingsBox"]
margin_right = 750.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
focus_mode = 2
custom_fonts/font = SubResource( 3 )
text = "Developer Update Log"
align = 1
valign = 1
uppercase = true

[node name="Text" type="Label" parent="developerUpdate/Scroll/SettingsBox"]
margin_top = 64.0
margin_right = 750.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 4 )
valign = 1
autowrap = true

[node name="Ok" type="Button" parent="developerUpdate"]
margin_left = 347.0
margin_top = 358.0
margin_right = 439.0
margin_bottom = 392.0
size_flags_horizontal = 4
theme = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = ExtResource( 27 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "OK"

[node name="Terms and Conditions" type="ColorRect" parent="."]
pause_mode = 2
visible = false
margin_left = 112.0
margin_top = 100.0
margin_right = 912.0
margin_bottom = 500.0
rect_min_size = Vector2( 800, 400 )
focus_mode = 2
color = Color( 0, 0.0980392, 0.745098, 1 )

[node name="Scroll" type="ScrollContainer" parent="Terms and Conditions"]
margin_left = 25.0
margin_top = 25.0
margin_right = 775.0
margin_bottom = 345.0
focus_mode = 2
theme = ExtResource( 17 )
scroll_horizontal_enabled = false

[node name="SettingsBox" type="VBoxContainer" parent="Terms and Conditions/Scroll"]
margin_right = 750.0
margin_bottom = 3508.0
rect_min_size = Vector2( 750, 200 )
focus_mode = 2

[node name="Title" type="Label" parent="Terms and Conditions/Scroll/SettingsBox"]
margin_right = 750.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
focus_mode = 2
custom_fonts/font = SubResource( 11 )
text = "TERMS AND CONDITIONS"
align = 1
valign = 1
uppercase = true

[node name="Text" type="Label" parent="Terms and Conditions/Scroll/SettingsBox"]
margin_top = 64.0
margin_right = 750.0
margin_bottom = 3244.0
custom_fonts/font = SubResource( 12 )
text = "Updated: 11/05/2019

Please read these Terms and Conditions between you the user and Ketashi Corporation (\"us\", \"we\", or \"our\") carefully before clicking the \"Continue\" button and using JumpBot:


TERMS OF USE

You as the user will agree to the following terms before using the app’s online features:
•	You will not attempt to use hack, exploit bugs or use any other technique to change your online score.
•	You will not use obscene, vulgar, controversial, racist, homophobe, transphobe or anything that could be offensive or as an attack against a group/individual. What is deemed as inappropriate will be determined at our sole discretion.

Failure to comply to these terms will result in the account being banned and all resulting info to be deleted.


ADVERTISEMENT PRIVACY POLICY

JumpBot software uses Google’s AdMob advertising service.
Please follow this link: https://policies.google.com/privacy?hl=en
If you accept the terms, you accept the use of advertisements to sponsor the game.

RANKING SERVICE PRIVACY POLICY

We as a company will collect the following information if you as the user decide to use our online ranking service:
•	Username – This is the username you will be asked to input before logging/registering in our online ranking service. This information will be stored

•	IP address – This is the only private information we must collect for our you to access our online ranking service. This information will not be stored.

•	Password – This is the password you will be asked to input before logging/registering in our online ranking service. The password will be hashed for security. This information will be stored.

•	Score – This is the score you will be asked to input before logging/registering in our online ranking service. This information will be stored.

Account deletion removes any collected information on our servers.

If you want to temporarily stop the collect of information, you can either turn online mode off on the menu or disconnect from your account.

Turning off online ranking will allow you to still save your online score but other users won't be able to see it.

All data transferred between the software and our servers is encrypted, however, we do not guarantee full protection of this data against malicious attempts to steal it.


LICENSE GRANTS

We as a company grant you the following:
A revocable, non¬exclusive, non-transferable, limited license to download, install and use the Application solely for your personal, non-commercial purposes strictly in accordance with the terms of this Agreement.


LICENSE RESTRICTIONS

You agree not to, and you will not permit others to:
License, sell, rent, lease, assign, distribute, transmit, host, outsource, disclose or otherwise commercially exploit the Application or make the Application available to any third party.


TERMINATION

We may terminate or suspend access to our Service and our software immediately, without prior notice or liability, for any reasons whatsoever, including without limitation if you breach the Terms. All provisions of the Terms which by their nature should survive termination shall survive termination, including, without limitation, ownership provisions, warranty disclaimers, indemnity and limitations of liability.


GOVERNING LAW

Our software and service abide by the laws and the justice system of The Swiss Confederation.


CHANGES TO THIS AGREEMENT

We reserve the right, at our sole discretion, to modify, remove or replace these Terms at any time. If a revision is consequential, we will try to provide at least 30 days' notice prior to any new terms taking effect. What constitutes a consequential change will be determined at our sole discretion.


WARRANTEE

THE SOFTWARE AND ANY SERVICE ARE PROVIDED “AS IS” WITHOUT WARRANTY OF ANY KIND, EITHER EXPRESSED OR IMPLIED. WE DO NOT WARRANT THAT THE PRODUCT WILL MEET YOUR REQUIREMENTS OR THAT ITS OPERATION WILL BE UNINTERRUPTED OR ERROR FREE. WE DISCLAIM ANY WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, AND NON-INFRINGEMENT. 
Some jurisdictions do not allow the exclusion of implied warranties or limitations on how long an implied warranty may last, so the above limitations may not apply to You. This warranty gives You specific legal rights. You may have other rights that vary from state to state.


CREDITS

•	Game art, design and programming made by Loïc Zammit and Maxime Zammit.

•	Font: codeman38: http://www.zone38.net/ - Terms and conditions do not apply to the music.

•	Music: Juhani Junkala: https://juhanijunkala.com/ - Terms and conditions do not apply to the music.

•	Sound effects: Little Robot Sound Factory, www.littlerobotsoundfactory.com - Terms and conditions do not apply to the sound effects.

•	Godot Game Engine and Binaries were used to make the game: godotengine.org/license - Terms and conditions do not apply to the binaries and any tools used to make the game.


CONTACT INFORMATION

If you have any questions about these Terms, please contact us using the following email address:
contact@ketashi.com
"
valign = 1
autowrap = true

[node name="Ok" type="Button" parent="Terms and Conditions"]
margin_left = 347.0
margin_top = 358.0
margin_right = 439.0
margin_bottom = 392.0
size_flags_horizontal = 4
theme = SubResource( 13 )
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 15 )
custom_styles/focus = SubResource( 16 )
custom_styles/disabled = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
custom_fonts/font = ExtResource( 27 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "OK"

[node name="Input" type="LineEdit" parent="."]
pause_mode = 2
visible = false
margin_right = 400.0
margin_bottom = 60.0
rect_min_size = Vector2( 400, 60 )
focus_mode = 1
size_flags_horizontal = 4
theme = ExtResource( 17 )
custom_styles/normal = SubResource( 19 )
custom_fonts/font = SubResource( 20 )
custom_colors/selection_color = Color( 1, 1, 1, 1 )
custom_colors/cursor_color = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
max_length = 24
script = ExtResource( 28 )

[node name="LoadingScreen" type="ColorRect" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.519529, 0.583344, 1, 1 )

[node name="Label" type="Label" parent="LoadingScreen"]
margin_left = 89.0
margin_top = 250.0
margin_right = 935.0
margin_bottom = 350.0
custom_fonts/font = SubResource( 21 )
text = "Connecting to Servers..."
align = 1
autowrap = true
uppercase = true

[node name="MenuLoading" type="ColorRect" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.519529, 0.583344, 1, 1 )

[node name="Label" type="Label" parent="MenuLoading"]
margin_left = 251.0
margin_top = 250.0
margin_right = 773.0
margin_bottom = 350.0
custom_fonts/font = SubResource( 21 )
text = "Loading Menu..."
align = 1
autowrap = true
uppercase = true

[node name="GameLoading" type="ColorRect" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.519529, 0.583344, 1, 1 )

[node name="Label" type="Label" parent="GameLoading"]
margin_left = 251.0
margin_top = 250.0
margin_right = 773.0
margin_bottom = 350.0
custom_fonts/font = SubResource( 21 )
text = "Loading Game..."
align = 1
autowrap = true
uppercase = true
[connection signal="login" from="." to="Request" method="_on_menu_scene_login"]
[connection signal="message" from="." to="Request" method="_on_menu_scene_message"]
[connection signal="signUp" from="." to="Request" method="_on_menu_scene_signUp"]
[connection signal="pressed" from="menu/subMenu/play/Play" to="menu" method="_on_Play_pressed"]
[connection signal="pressed" from="menu/subMenu/play/OnlineMode" to="menu" method="_on_OnlineMode_pressed"]
[connection signal="pressed" from="menu/subMenu/Scores" to="menu" method="_on_Scores_pressed"]
[connection signal="pressed" from="menu/subMenu/Settings" to="menu" method="_on_Settings_pressed"]
[connection signal="pressed" from="popup/VBoxContainer/HBoxContainer/Cancel" to="popup" method="_on_Skip_pressed"]
[connection signal="pressed" from="popup/VBoxContainer/HBoxContainer/Log In" to="popup" method="_on_Log_In_pressed"]
[connection signal="pressed" from="popup/VBoxContainer/HBoxContainer/Sign Up" to="popup" method="_on_Sign_Up_pressed"]
[connection signal="pressed" from="logIn/VBoxContainer/HBoxContainer/Buttons/Enter" to="." method="_on_Enter_login_pressed"]
[connection signal="pressed" from="logIn/VBoxContainer/HBoxContainer/Buttons/Cancel" to="popup" method="_on_Skip_login_pressed"]
[connection signal="pressed" from="signUp/VBoxContainer/HBoxContainer/Buttons/Enter" to="." method="_on_Enter_signUp_pressed"]
[connection signal="pressed" from="signUp/VBoxContainer/HBoxContainer/Buttons/Cancel" to="popup" method="_on_Skip_signUp_pressed"]
[connection signal="pressed" from="developerUpdate/Ok" to="popup" method="_on_Ok_pressed"]
[connection signal="pressed" from="Terms and Conditions/Ok" to="popup" method="_on_Ok_pressed"]
[connection signal="text_changed" from="Input" to="Input" method="_on_Input_text_changed"]
